--- a/test/manual/slos.yaml
+++ b/test/manual/slos.yaml
@@ -18,6 +18,9 @@ spec:
         errorQuery: |
           sum(
             increase(skipper_serve_host_duration_seconds_count{host="www_spotahome_com", code=~"5.."}[2m]))
+    output:
+      prometheus: {}
+
   # Latency example.
   - name: "90_http_request_latency_lt_250ms"
     description: 90% of requests must be served with in less than 250ms.
@@ -35,6 +38,9 @@ spec:
           -
           sum(
             increase(skipper_serve_host_duration_seconds_bucket{host="www_spotahome_com", le="0.25"}[2m]))
+    output:
+      prometheus: {}
+
   # Same latency example as previous one but with different latency bucket. Is normal to have
   # multiple SLOs on different latency limits.
   - name: "99_http_request_latency_lt_500ms"
@@ -53,6 +59,9 @@ spec:
           -
           sum(
             increase(skipper_serve_host_duration_seconds_bucket{host="www_spotahome_com", le="0.5"}[2m]))
+    output:
+      prometheus: {}
+
   # Same as previous one except the availability objective. This way we can see that
   # with the same SLIs our SLO changes drastically.
   - name: "90_http_request_latency_lt_500ms"
