Migrate from slok/service-level-operator to spotahome/service-level-operator
Signed-off-by: Xabier Larrakoetxea <slok69@gmail.com>

--- a/deploy/manifests/rbac.yaml
+++ b/deploy/manifests/rbac.yaml
@@ -25,7 +25,7 @@ rules:
 
   # Operator logic.
   - apiGroups:
-      - measure.slok.xyz
+      - monitoring.spotahome.com
     resources:
       - servicelevels
       - servicelevels/status
